--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				case 4:{
 					let q4n1 = getRandomInt(300)+600;
 					let q4n2 = getRandomInt(20)+10;
-					qtAry[i].innerHTML = `${q4n1}顆糖果要分給${q4n1*q4n2}個小朋友，每個小朋友可以領到幾顆?`;
+					qtAry[i].innerHTML = `${q4n1*q4n2}顆糖果要分給${q4n1}個小朋友，每個小朋友可以領到幾顆?`;
 					answerAry[i] = q4n2;
 					console.log('Q4 finish');
 					break;
